body post bug fixed